updated all files

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-a-Sketch</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-    <button class="grid-size-btn">Grid size</button>
-    
-    <div class="grid-container">
-        
-    </div>
-    <script src="script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Etch-a-Sketch</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="text">
+            <h1 class="title">Etch-a-Sketch</h1>
+            <p class="instructions">Just click the button to create a grid of the size you desire (a maximum of 100) and have fun dragging your mouse and filling it with different random colors.</p>
+            <button class="grid-size-btn">Grid size</button>
+        </div>
+        <div class="grid-container">      
+        <script src="script.js"></script>
+    </body>
 </html>
